--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "aiosqlite>=0.21.0",
+    "alembic>=1.17.2",
+    "asyncpg>=0.31.0",
     "fastapi>=0.123.0",
-    "fastapi-users[sqlalchemy]>=15.0.1",
     "imagekitio>=4.2.0",
+    "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
+    "sqlalchemy>=2.0.44",
     "uvicorn[standard]>=0.38.0",
 ]
